Bug 485949 - Ctrl+PgUp and Ctrl+PgDn shortcuts are broken
Summary: Ctrl+PgUp and Ctrl+PgDn shortcuts are broken
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-22 09:36 UTC by Nate Graham
Modified: 2024-04-23 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-04-22 09:36:06 UTC
Everything KDE from git master built on top of Fedora 39.

In the past NeoChat would let you switch between rooms/DMs with Ctrl+PgUp and Ctrl+PgDn. However it seems to have broken at some point in the recent past, and now these shortcuts don't do anything anymore.
Comment 1 Bug Janitor Service 2024-04-22 21:47:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1711
Comment 2 James Graham 2024-04-22 22:01:50 UTC
Git commit 28c9d944573c2393b5f4fd1484601a8286a16fc5 by James Graham.
Committed on 22/04/2024 at 22:01.
Pushed by nvrwhere into branch 'master'.

Fix Roomlist Shortcuts

Fix the ctrl + pgup/pgdwn shortcuts for the room list so that they work with tree model

M  +10   -0    src/models/sortfilterroomtreemodel.cpp
M  +2    -0    src/models/sortfilterroomtreemodel.h
M  +18   -14   src/qml/RoomListPage.qml

https://invent.kde.org/network/neochat/-/commit/28c9d944573c2393b5f4fd1484601a8286a16fc5
Comment 3 Nate Graham 2024-04-22 22:10:35 UTC
Yay thank you so much!
Comment 4 Tobias Fella 2024-04-23 12:06:33 UTC
Git commit 4dfd4b68ebc006377efafd7207933a858860a3ce by Tobias Fella, on behalf of James Graham.
Committed on 23/04/2024 at 12:03.
Pushed by tfella into branch 'release/24.05'.

Fix Roomlist Shortcuts

Fix the ctrl + pgup/pgdwn shortcuts for the room list so that they work with tree model
(cherry picked from commit 28c9d944573c2393b5f4fd1484601a8286a16fc5)

M  +10   -0    src/models/sortfilterroomtreemodel.cpp
M  +2    -0    src/models/sortfilterroomtreemodel.h
M  +18   -14   src/qml/RoomListPage.qml

https://invent.kde.org/network/neochat/-/commit/4dfd4b68ebc006377efafd7207933a858860a3ce