Fix Roomlist Shortcuts

Fix the ctrl + pgup/pgdwn shortcuts for the room list so that they work with tree model

BUG: 485949
(cherry picked from commit 28c9d944573c2393b5f4fd1484601a8286a16fc5)